# notion-automations

./: .copier-answers.yml  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/commands/: latex-suite.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: api.md  ci-cd.md  docker.md  export-classes-ics.md  getting-started.md  index.md  ml-setup.md  notion-schema-erd.md  releasing.md
scripts/: print_classes_rows.py  print_classes_schema.py
src/notion_automations/: __init__.py  cli.py  config.py  finance.py  gpa_project.py  ics_export.py  main.py  notion.py  todo_create.py  wise.py
tests/: conftest.py  test_cli.py  test_config.py  test_finance.py  test_gpa_project.py  test_ics_export.py  test_main.py  test_notion.py  test_todo_create.py  test_wise.py
